# fast-audio-resampler

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  python-release.yml
benches/: resampler.rs
docs/: default.md  streaming.md
src/: aligned.rs  backend.rs  config.rs  error.rs  filter.rs  iir.rs  iir_backend.rs  lib.rs  main.rs  python.rs  resampler.rs  ring.rs
tests/: cli.rs
