[package]
name = "fast-audio-resampler"
version = "0.4.0"
edition = "2024"
rust-version = "1.95"
authors = ["Yehor Smoliakov <egorsmkv@gmail.com>"]
description = "Fast streaming audio resampler with SIMD-accelerated x86, AArch64 ARM, and RISC-V paths."
license = "MIT"
repository = "https://github.com/RustedBytes/fast-audio-resampler"
readme = "README.md"
keywords = ["audio", "resampler", "simd", "neon", "wav"]
categories = ["multimedia::audio", "algorithms"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
cli = ["dep:hound"]
python = ["dep:pyo3", "pyo3/abi3-py39"]
python-extension = ["python", "pyo3/extension-module"]

[dependencies]
hound = { version = "3.5", optional = true }
pyo3 = { version = "0.28.3", optional = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "resampler"
harness = false

[[bin]]
name = "fast-audio-resampler"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = "thin"
codegen-units = 1
